--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <a href="exam.html">Exam</a>
     <a href="colorchange.html">Color</a>
     <a href="kalanjali.html">Form</a>
+    <a href="bird.html">Game</a>
 </body>
 </html>
